feat: split router interface to generator
