# examples/petstore/openapi.yaml
@@ -1,174 +1,129 @@
-openapi: 3.1.0
+openapi: 3.0.3
 info:
-  description: This is a sample Pet Store API using OpenAPI 3.1
-  title: Pet Store API - OpenAPI 3.1
+  description: Sample Petstore API using Fiber and OpenAPI
+  title: Petstore API
   version: 1.0.0
-servers:
-- description: Pet Store Server
-  url: https://petstore3.swagger.io
 paths:
-  /api/v3/pet:
+  /pets:
+    get:
+      description: Returns a list of all pets in the store
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                items:
+                  $ref: '#/components/schemas/ModelPet'
+                type: array
+          description: OK
+      summary: Get all pets
+      tags:
+      - Pets
     post:
-      description: Add a new pet to the store.
+      description: Creates a new pet in the store
       requestBody:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Pet'
+              $ref: '#/components/schemas/ModelCreatePetRequest'
       responses:
-        "200":
+        "201":
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Pet'
-          description: OK
-      security:
-      - petstore_auth:
-        - write:pets
-        - read:pets
-      summary: Add a new pet to the store.
+                $ref: '#/components/schemas/ModelPet'
+          description: Created
+      summary: Create a new pet
       tags:
-      - pet
+      - Pets
     put:
-      description: Update an existing pet by Id.
+      description: Updates an existing pet in the store
       requestBody:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Pet'
+              $ref: '#/components/schemas/ModelUpdatePetRequest'
       responses:
         "200":
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Pet'
+                $ref: '#/components/schemas/ModelPet'
           description: OK
-      security:
-      - petstore_auth:
-        - write:pets
-        - read:pets
-      summary: Update an existing pet.
+      summary: Update an existing pet
       tags:
-      - pet
-  /api/v3/pet/{petId}:
+      - Pets
+  /pets/{petId}:
     delete:
-      description: Deletes a pet.
+      description: Deletes a pet from the store
       parameters:
       - in: path
         name: petId
         required: true
         schema:
-          format: int64
           type: integer
-      - in: header
-        name: api_key
-        schema:
-          type: string
       responses:
         "204":
           description: No Content
-      security:
-      - petstore_auth:
-        - write:pets
-        - read:pets
-      summary: Deletes a pet.
+      summary: Delete a pet
       tags:
-      - pet
+      - Pets
     get:
-      description: Returns a single pet.
+      description: Returns a single pet by its ID
       parameters:
       - in: path
         name: petId
         required: true
         schema:
-          format: int64
           type: integer
       responses:
         "200":
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Pet'
+                $ref: '#/components/schemas/ModelPet'
           description: OK
-      security:
-      - petstore_auth:
-        - write:pets
-        - read:pets
-      summary: Find a pet by ID.
+      summary: Get pet by ID
       tags:
-      - pet
+      - Pets
     post:
-      description: Update a pet resource based on form data.
+      description: Updates a pet using form data
       parameters:
+      - in: query
+        name: name
+        schema:
+          type: string
+      - in: query
+        name: status
+        schema:
+          type: string
       - in: path
         name: petId
         required: true
         schema:
-          format: int64
           type: integer
       requestBody:
         content:
           application/x-www-form-urlencoded:
             schema:
-              $ref: '#/components/schemas/FormDataUpdatePetFormDataRequest'
+              $ref: '#/components/schemas/FormDataModelUpdatePetFormData'
       responses:
         "200":
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Pet'
+                $ref: '#/components/schemas/ModelPet'
           description: OK
-      security:
-      - petstore_auth:
-        - write:pets
-        - read:pets
-      summary: Updates a pet in the store with form data.
+      summary: Update pet by form data
       tags:
-      - pet
-  /api/v3/pet/{petId}/uploadImage:
-    post:
-      description: Uploads image of the pet.
-      parameters:
-      - in: query
-        name: additionalMetadata
-        schema:
-          type: string
-      - in: path
-        name: petId
-        required: true
-        schema:
-          format: int64
-          type: integer
-      requestBody:
-        content:
-          application/octet-stream:
-            schema:
-              type: string
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ApiResponse'
-          description: OK
-      security:
-      - petstore_auth:
-        - write:pets
-        - read:pets
-      summary: Uploads an image.
-      tags:
-      - pet
-  /api/v3/pet/findByStatus:
+      - Pets
+  /pets/findByStatus:
     get:
-      description: Multiple status values can be provided with comma separated strings
+      description: Returns a list of pets based on their status
       parameters:
       - in: query
         name: status
         schema:
-          enum:
-          - available
-          - pending
-          - sold
           type: string
       responses:
         "200":
@@ -176,126 +131,122 @@ paths:
             application/json:
               schema:
                 items:
-                  $ref: '#/components/schemas/Pet'
-                type:
-                - "null"
-                - array
+                  $ref: '#/components/schemas/ModelPet'
+                type: array
           description: OK
-      security:
-      - petstore_auth:
-        - write:pets
-        - read:pets
-      summary: Finds Pets by status.
+      summary: Find pets by status
       tags:
-      - pet
-  /api/v3/pet/findByTags:
+      - Pets
+  /pets/findByTags:
     get:
-      description: Multiple tags can be provided with comma separated strings. Use
-        tag1, tag2, tag3 for testing.
+      description: Returns a list of pets based on their tags
       parameters:
       - in: query
         name: tags
-        required: false
         schema:
           items:
             type: string
-          type:
-          - array
-          - "null"
+          type: array
       responses:
         "200":
           content:
             application/json:
               schema:
                 items:
-                  $ref: '#/components/schemas/Pet'
-                type:
-                - "null"
-                - array
+                  $ref: '#/components/schemas/ModelPet'
+                type: array
           description: OK
-      security:
-      - petstore_auth:
-        - write:pets
-        - read:pets
-      summary: Finds Pets by tags.
+      summary: Find pets by tags
       tags:
-      - pet
+      - Pets
 components:
   schemas:
-    ApiResponse:
-      properties:
-        code:
-          format: int32
-          type: integer
-        message:
-          type: string
-        type:
-          type: string
-      type: object
-    Category:
-      properties:
-        id:
-          format: int64
-          type: integer
-        name:
-          type: string
-      type: object
-    FormDataUpdatePetFormDataRequest:
+    FormDataModelUpdatePetFormData:
       properties:
         name:
           type: string
         status:
-          enum:
-          - available
-          - pending
-          - sold
           type: string
-      required:
-      - name
       type: object
-    Pet:
+    ModelCategory:
+      properties:
+        id:
+          example: 1
+          type: integer
+        name:
+          example: Dogs
+          type: string
+      type: object
+    ModelCreatePetRequest:
       properties:
         category:
-          $ref: '#/components/schemas/Category'
+          $ref: '#/components/schemas/ModelCategory'
+        name:
+          type: string
+        photoUrls:
+          items:
+            type: string
+          nullable: true
+          type: array
+        status:
+          type: string
+        tags:
+          items:
+            $ref: '#/components/schemas/ModelTag'
+          nullable: true
+          type: array
+      type: object
+    ModelPet:
+      properties:
+        category:
+          $ref: '#/components/schemas/ModelCategory'
         id:
-          format: int64
+          example: 1
+          type: integer
+        name:
+          example: doggie
+          type: string
+        photoUrls:
+          items:
+            type: string
+          nullable: true
+          type: array
+        status:
+          example: available
+          type: string
+        tags:
+          items:
+            $ref: '#/components/schemas/ModelTag'
+          nullable: true
+          type: array
+      type: object
+    ModelTag:
+      properties:
+        id:
+          example: 1
+          type: integer
+        name:
+          example: friendly
+          type: string
+      type: object
+    ModelUpdatePetRequest:
+      properties:
+        category:
+          $ref: '#/components/schemas/ModelCategory'
+        id:
           type: integer
         name:
           type: string
         photoUrls:
           items:
             type: string
-          type:
-          - array
-          - "null"
+          nullable: true
+          type: array
         status:
-          enum:
-          - available
-          - pending
-          - sold
           type: string
         tags:
           items:
-            $ref: '#/components/schemas/Tag'
+            $ref: '#/components/schemas/ModelTag'
+          nullable: true
           type: array
-      required:
-      - name
-      - photoUrls
       type: object
-    Tag:
-      properties:
-        id:
-          format: int64
-          type: integer
-        name:
-          type: string
-      type: object
-  securitySchemes:
-    petstore_auth:
-      flows:
-        implicit:
-          authorizationUrl: https://petstore3.swagger.io/oauth/authorize
-          scopes:
-            read:pets: read your pets
-            write:pets: modify pets in your account
-      type: oauth2
